TransformerEncoderClassificationの動作確認まで

--- a/main.ipynb
+++ b/main.ipynb
@@ -162,11 +162,8 @@
     "        k = self._split_head(k)\n",
     "        v = self._split_head(v)\n",
     "        \n",
-    "        print('q.shape', q.size())\n",
     "        #queryとkeyの関連度の計算と、Scaled Dot-production\n",
-    "        print('k.transpose(2,3).shape', k.transpose(2, 3).shape)\n",
     "        weights = torch.matmul(q, k.transpose(2, 3)) / math.sqrt(self.d_model)\n",
-    "        print(weights.shape)\n",
     "        \n",
     "        #maskをかける\n",
     "        mask = mask.unsqueeze(1)\n",
@@ -174,7 +171,6 @@
     "        \n",
     "        #AttentionWeightを計算\n",
     "        attention_weight = F.softmax(weights, dim=-1)# [batch_size, head_num, q_length, k_length]\n",
-    "        print(attention_weight.shape)\n",
     "        \n",
     "        #AttentionWeightよりvalueから情報を引き出す\n",
     "        attention_output = torch.matmul(attention_weight, v)# [batch_size, head_num, q_length, d_model/head_num]\n",
@@ -261,17 +257,13 @@
     "    def __init__(self, d_model, head_num, dropout=0.1):\n",
     "        super().__init__()\n",
     "\n",
-    "        # LayerNormalization層\n",
-    "        # https://pytorch.org/docs/stable/nn.html?highlight=layernorm\n",
+    "        # LayerNormalization\n",
     "        self.norm_1 = nn.LayerNorm(d_model)\n",
     "        self.norm_2 = nn.LayerNorm(d_model)\n",
-    "        \n",
-    "        # Attention層\n",
+    "        # Attention\n",
     "        self.attn = MultiheadAttention(d_model, head_num, dropout)\n",
-    "\n",
-    "        # Attentionのあとの全結合層2つ\n",
+    "        # FFN\n",
     "        self.ff = FeedForward(d_model)\n",
-    "\n",
     "        # Dropout\n",
     "        self.dropout_1 = nn.Dropout(dropout)\n",
     "        self.dropout_2 = nn.Dropout(dropout)\n",
@@ -313,10 +305,6 @@
       "        False, False, False, False, False, False, False, False, False, False,\n",
       "        False, False, False, False, False, False, False, False, False, False,\n",
       "        False, False, False, False, False, False, False, False, False, False])\n",
-      "q.shape torch.Size([1, 5, 140, 60])\n",
-      "k.transpose(2,3).shape torch.Size([1, 5, 60, 140])\n",
-      "torch.Size([1, 5, 140, 140])\n",
-      "torch.Size([1, 5, 140, 140])\n",
       "入力のテンソルサイズ： torch.Size([1, 140, 300])\n",
       "出力のテンソルサイズ： torch.Size([1, 140, 300])\n",
       "Attentionのサイズ： torch.Size([1, 5, 140, 140])\n"
@@ -377,6 +365,103 @@
     "print(\"入力のテンソルサイズ：\", x2.shape)\n",
     "print(\"出力のテンソルサイズ：\", x3.shape)\n",
     "print(\"Attentionのサイズ：\", normlized_weights.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassificationHead(nn.Module):\n",
+    "    '''Transformer_Blockの出力を使用し、最後にクラス分類させる'''\n",
+    "\n",
+    "    def __init__(self, d_model=300, output_dim=5):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # 全結合層\n",
+    "        self.linear = nn.Linear(d_model, output_dim)  \n",
+    "\n",
+    "        # 重み初期化処理\n",
+    "        nn.init.normal_(self.linear.weight, std=0.02)\n",
+    "        nn.init.normal_(self.linear.bias, 0)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x0 = x[:, 0, :]  # <cls>の結果を用いる\n",
+    "        out = self.linear(x0)\n",
+    "\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 最終的なTransformerモデルのクラス\n",
+    "\n",
+    "\n",
+    "class TransformerEncoderClassification(nn.Module):\n",
+    "\n",
+    "    def __init__(self, text_embedding_vectors, head_num, dropout=0.1, d_model=300, max_seq_len=140, output_dim=5):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # モデル構築\n",
+    "        self.net1 = Embedder(text_embedding_vectors)\n",
+    "        self.net2 = PositionalEncoder(d_model=d_model, max_seq_len=max_seq_len)\n",
+    "        self.net3 = nn.Dropout(dropout)\n",
+    "        self.net4_1 = TransformerBlock(d_model=d_model, head_num=head_num, dropout=dropout)\n",
+    "        self.net4_2 = TransformerBlock(d_model=d_model, head_num=head_num, dropout=dropout)\n",
+    "        self.net5 = ClassificationHead(output_dim=output_dim, d_model=d_model)\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        x1 = self.net1(x)  #Embedding\n",
+    "        x2 = self.net2(x1) #PositinalEncoding\n",
+    "        x3 = self.net3(x2) #Dropout\n",
+    "        x4_1, normlized_weights_1 = self.net4_1(x3, mask) #self-Attention+FFN \n",
+    "        x4_2, normlized_weights_2 = self.net4_2(x4_1, mask)  #self-Attention+FFN\n",
+    "        x5 = self.net5(x4_2)  #linear\n",
+    "        return x5, normlized_weights_1, normlized_weights_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['最近', 'は', '家', 'に', 'いる', 'こと', 'が', '多い', '。', 'なんだか', '鬱', 'な', '気分', 'に', 'なる', 'ん', 'だ', 'よ', 'な', '。']\n",
+      "出力のテンソルサイズ： torch.Size([1, 5])\n",
+      "出力テンソルのsigmoid： tensor([[0.1391, 0.1677, 0.5051, 0.0515, 0.1366]], grad_fn=<SoftmaxBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "mecab = MeCab.Tagger('-Owakati')\n",
+    "# バッチサイズ分文章とラベルのセットを取り出す\n",
+    "s = '最近は家にいることが多い。なんだか鬱な気分になるんだよな。'\n",
+    "result = [tok for tok in mecab.parse(s).split()]\n",
+    "print(result)\n",
+    "#id列に変換\n",
+    "result = text_to_ids(result, stoi)\n",
+    "\n",
+    "\n",
+    "# モデル構築\n",
+    "net = TransformerEncoderClassification(\n",
+    "    text_embedding_vectors=x, head_num=5, dropout=0.1, d_model=300, max_seq_len=140, output_dim=5)\n",
+    "\n",
+    "# 入出力\n",
+    "\n",
+    "input_mask = (result != input_pad)\n",
+    "out, normlized_weights_1, normlized_weights_2 = net(result, input_mask)\n",
+    "\n",
+    "print(\"出力のテンソルサイズ：\", out.shape)\n",
+    "print(\"出力テンソルのsigmoid：\", F.softmax(out, dim=1))"
    ]
   },
   {
